feat: 拦截器权限判断的性能优化